<resources>
    <string name="app_name">Team8</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="search_title">Run a Search</string>
    <string name="search_time_range">1. Select the time range</string>
    <string name="search_from">From</string>
    <string name="search_to">To</string>
    <string name="search_select_stock">2. Select the stock symbol</string>
    <string name="search_symbol_hint">Search for a symbol (e.g \"Apple\" or \"AAPL\")</string>
    <string name="stock_default_symbol">DFSS</string>
    <string name="stock_default_description">StockDefaultDescription</string>
    <string name="stock_default_exchange">:DFEX</string>
    <string name="search_analysis_types">3. Select the indicators to be displayed</string>
    <string name="sma">SMA</string>
    <string name="EMA">EMA</string>
    <string name="MACD">MACD</string>
    <string name="MACDAVG">MACDAVG</string>
    <string name="search_button">Search</string>
    <string name="search_reset">Reset</string>
    <string name="search_xma_days">For SMA, EMA:</string>
    <string name="days">days</string>
    <string name="search_history_title">Search History</string>
    <string name="search_history_num_items">Showing the last %1$d items</string>
    <string name="default_date">01/01/1970</string>
    <string name="summary">👁</string>
    <string name="search">🔍</string>
    <string name="analysis_types">SMA, EMA, MACD, MACDAVG</string>
    <string name="date_future">Date must be today or before</string>
    <string name="from">From:</string>
    <string name="titletextgraph">titleTextGraph</string>
    <string name="stock">Stock:</string>
    <string name="xyz">XYZ</string>
    <string name="date1">DATE1</string>
    <string name="to">to</string>
    <string name="date2">DATE2</string>
    <string name="save_as_jpg">Save As .jpg</string>
    <string name="todo">TODO</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="switch_toggle_price">Toggle price line</string>
    <string name="search_history_clear">Clear history</string>
    <string name="marker_text">%1$s: %2$s$</string>
</resources>
