<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <EditText
        android:id="@+id/titleTextGraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/titletextgraph"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/stockText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="74dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/stockText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="74dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/stockText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="93dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/dateText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date1"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="93dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/toText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="93dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/dateText02"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/date2"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="93dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_graph"
        android:layout_width="398dp"
        android:layout_height="481dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="125dp" />

    <ImageButton
        android:id="@+id/saveImageBtn"
        android:layout_width="35dp"
        android:layout_height="40dp"
        app:srcCompat="@android:drawable/ic_menu_save"
        tools:layout_editor_absoluteX="350dp"
        tools:layout_editor_absoluteY="653dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo"
        android:onClick="saveImageAsPNG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="83dp"
        android:layout_height="22dp"
        android:text="@string/save_as_jpg"
        android:textAlignment="center"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="324dp"
        tools:layout_editor_absoluteY="693dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/summaryBtn"
        android:layout_width="81dp"
        android:layout_height="36dp"
        android:text="@string/summary"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="653dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
       />

</androidx.constraintlayout.widget.ConstraintLayout>