<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/search_history_date_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/default_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_history_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_default_symbol"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/search_history_date_from"
        app:layout_constraintTop_toBottomOf="@+id/search_history_date_from" />

    <TextView
        android:id="@+id/search_history_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/stock_default_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/search_history_symbol"
        app:layout_constraintTop_toBottomOf="@+id/search_history_symbol" />

    <Button
        android:id="@+id/button2"
        android:layout_width="49dp"
        android:layout_height="46dp"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/search_history_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_hist_item_repeat"
        app:layout_constraintTop_toTopOf="@+id/search_history_date_from" />

    <Button
        android:id="@+id/search_hist_item_repeat"
        android:layout_width="49dp"
        android:layout_height="46dp"
        android:text="@string/summary"
        app:layout_constraintBottom_toBottomOf="@+id/search_history_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_history_date_from" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/search_history_date_from"
        app:layout_constraintTop_toTopOf="@+id/search_history_date_from" />

    <TextView
        android:id="@+id/search_history_date_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/default_date"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/search_history_symbol"
        app:layout_constraintTop_toTopOf="@+id/search_history_symbol" />

    <TextView
        android:id="@+id/search_history_analysis_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/analysis_types"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/search_history_symbol" />

</androidx.constraintlayout.widget.ConstraintLayout>